[gd_scene load_steps=17 format=3 uid="uid://bpqs3h031dhae"]

[ext_resource type="Script" uid="uid://bscostx7xb3nq" path="res://Scripts/ObjectScripts/DroneBulletManager.gd" id="1_50na5"]
[ext_resource type="Texture2D" uid="uid://lp8wja5hyqkb" path="res://Assets/Images/Objects/PlayerProps/PlayerBullet.png" id="2_qdroe"]
[ext_resource type="AudioStream" uid="uid://c5dfjr0r10par" path="res://Assets/Audio/SFX/BulletAmbientNoise.mp3" id="3_kq20q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j4cqu"]
radius = 1.58114

[sub_resource type="Gradient" id="Gradient_74hgf"]
offsets = PackedFloat32Array(0.00645161, 1)
colors = PackedColorArray(0.47806, 0.3074, 0.53, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0l7vx"]
gradient = SubResource("Gradient_74hgf")
width = 1
height = 1

[sub_resource type="Gradient" id="Gradient_wdq26"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ovlhh"]
gradient = SubResource("Gradient_wdq26")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4quri"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(3, 5, 1)
angle_min = -720.0
angle_max = 720.0
spread = 89.11
initial_velocity_min = 10.0
initial_velocity_max = 19.8
gravity = Vector3(0, 20, 0)
color_ramp = SubResource("GradientTexture1D_ovlhh")
hue_variation_min = -0.02
hue_variation_max = 0.02
turbulence_noise_strength = 20.0
turbulence_noise_scale = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qo16s"]
atlas = ExtResource("2_qdroe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hllyl"]
atlas = ExtResource("2_qdroe")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15vm7"]
atlas = ExtResource("2_qdroe")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46hii"]
atlas = ExtResource("2_qdroe")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t442l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo16s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hllyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15vm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46hii")
}],
"loop": false,
"name": &"Init",
"speed": 13.0
}]

[sub_resource type="Gradient" id="Gradient_kvee5"]
offsets = PackedFloat32Array(0, 0.07838542, 0.37734374, 0.7032812)
colors = PackedColorArray(1, 1, 1, 1, 0.55146873, 0.55146873, 0.55146873, 1, 0.41768497, 0.41768497, 0.41768497, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f06ok"]
gradient = SubResource("Gradient_kvee5")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="DroneBullet" type="Node2D"]
z_index = 1
script = ExtResource("1_50na5")

[node name="BulletHurter" type="Area2D" parent="."]
collision_layer = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletHurter"]
position = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_j4cqu")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(2.5, 2.5)
amount = 100
texture = SubResource("GradientTexture2D_0l7vx")
lifetime = 2.0
visibility_rect = Rect2(-5000, -5000, 10000, 10000)
process_material = SubResource("ParticleProcessMaterial_4quri")

[node name="BulletSprite" type="AnimatedSprite2D" parent="."]
self_modulate = Color(2.454227, 0.8776983, 0.753506, 1)
position = Vector2(2.5, 2.5)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_t442l")
animation = &"Init"
autoplay = "Init"
frame = 3
frame_progress = 1.0

[node name="BulletAmbientSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kq20q")
volume_db = -20.0
autoplay = true
max_distance = 350.0
attenuation = 0.812252
panning_strength = 2.0

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.9720437, 0.35285103, 0.43903503, 1)
energy = 3.0
range_z_max = 7
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 0.1
texture = SubResource("GradientTexture2D_f06ok")

[connection signal="body_entered" from="BulletHurter" to="." method="_on_bullet_hurter_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
